# hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  api.py  available_models.txt  discover_azure_models.py  docker-compose.yml  ingest_pdfs.py  main.py  package-lock.json  package.json  pyproject.toml  socar-api.service  tailwind.config.ts  test.ipynb  test_available_models.py
app/: globals.css  layout.tsx  page.tsx
components/: EventModal.tsx  GameControls.tsx  PlanetCard.tsx  ResourceDisplay.tsx  StatsDisplay.tsx  TechnologyCard.tsx
lib/: gameData.ts  gameStore.ts  types.ts
logs/api_responses/ocr/: AbserondaTorpaqCirklənməsiAgırMetallarvəGeotermalInteqrasiyaRamanıSuraxan.pdf.jsonl  SOCARHistoricalDocumentProcessingChallenge_final.pdf.jsonl  dummy.pdf.jsonl
scripts/: docker-deploy.sh  install-docker.sh  setup-nginx.sh  setup-service.sh  start-api.sh
src/: __init__.py  api.py  chat.py  config.py  knowledge_base.py  llm_client.py  models.py  ocr.py  response_logger.py  text_corrector.py
